[gd_scene load_steps=19 format=3 uid="uid://rtvyd7ubikq"]

[ext_resource type="Script" path="res://level_endless.gd" id="1_yn62i"]
[ext_resource type="Texture2D" uid="uid://fp3bgownkge7" path="res://beach_sprite.png" id="2_wupk6"]
[ext_resource type="PackedScene" uid="uid://b1ggrd43bqyuf" path="res://scene/snake.tscn" id="3_ebgm8"]
[ext_resource type="Script" path="res://GameBoundary.gd" id="4_ir20c"]
[ext_resource type="FontFile" uid="uid://cltoyq6301a3g" path="res://PermanentMarker-Regular.ttf" id="5_6rtq1"]
[ext_resource type="Script" path="res://BudsSpawnArea.gd" id="6_1tbq6"]
[ext_resource type="Script" path="res://CampfireSpawn.gd" id="7_jwgdl"]
[ext_resource type="Texture2D" uid="uid://rdwj5lx70khm" path="res://warning.png" id="8_r4t1p"]
[ext_resource type="AudioStream" uid="uid://dos67c2uagkxu" path="res://success.wav" id="9_8a0xe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0tlp"]
size = Vector2(2939, 472)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgcis"]
size = Vector2(897.25, 733)

[sub_resource type="FontVariation" id="FontVariation_s7ui1"]
base_font = ExtResource("5_6rtq1")

[sub_resource type="LabelSettings" id="LabelSettings_uc171"]
font = SubResource("FontVariation_s7ui1")
font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_riwjk"]
size = Vector2(17.5, 669)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p56o4"]
size = Vector2(1171, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1ovd"]
size = Vector2(726, 348)

[sub_resource type="Animation" id="Animation_j8nxj"]
resource_name = "warn"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2, 2.2, 2.5, 2.8, 3.1, 3.4, 3.6, 3.8, 4.1, 4.4, 4.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.3, 0.3), Vector2(0.25, 0.25), Vector2(0.3, 0.3), Vector2(0.25, 0.25), Vector2(0.3, 0.3), Vector2(0.25, 0.25), Vector2(0.3, 0.3), Vector2(0.25, 0.25), Vector2(0.3, 0.3), Vector2(0.25, 0.25), Vector2(0.3, 0.3), Vector2(0.25, 0.25), Vector2(0.3, 0.3), Vector2(0.25, 0.25), Vector2(0.3, 0.3), Vector2(0.25, 0.25), Vector2(0, 0.3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_campfire"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_calx2"]
_data = {
"warn": SubResource("Animation_j8nxj")
}

[node name="level" type="Node2D"]
script = ExtResource("1_yn62i")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(579, 322.5)
scale = Vector2(0.606481, 0.606481)
texture = ExtResource("2_wupk6")

[node name="snake" parent="." instance=ExtResource("3_ebgm8")]
position = Vector2(318, 251)
is_king = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("4_ir20c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(599, -280)
shape = SubResource("RectangleShape2D_u0tlp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(591, 926)
shape = SubResource("RectangleShape2D_u0tlp")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-486, 319)
shape = SubResource("RectangleShape2D_qgcis")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1644, 318.5)
shape = SubResource("RectangleShape2D_qgcis")

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Goal" type="Label" parent="."]
light_mask = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 519.0
offset_top = 2.0
offset_right = 637.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Score: 1"
label_settings = SubResource("LabelSettings_uc171")
horizontal_alignment = 1

[node name="BudsSpawnArea" type="Area2D" parent="."]
script = ExtResource("6_1tbq6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BudsSpawnArea"]
position = Vector2(23, 318)
shape = SubResource("RectangleShape2D_riwjk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BudsSpawnArea"]
position = Vector2(1135, 322)
shape = SubResource("RectangleShape2D_riwjk")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BudsSpawnArea"]
position = Vector2(573, 10)
shape = SubResource("RectangleShape2D_p56o4")
debug_color = Color(2.5028e-06, 0.763696, 0.888688, 0.42)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BudsSpawnArea"]
position = Vector2(586, 597)
shape = SubResource("RectangleShape2D_p56o4")
debug_color = Color(2.5028e-06, 0.763696, 0.888688, 0.42)

[node name="Timer" type="Timer" parent="BudsSpawnArea"]
one_shot = true

[node name="target_1" type="Marker2D" parent="BudsSpawnArea"]
position = Vector2(956, 321)

[node name="target_2" type="Marker2D" parent="BudsSpawnArea"]
position = Vector2(211, 340)

[node name="CampfireSpawn" type="Area2D" parent="."]
script = ExtResource("7_jwgdl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CampfireSpawn"]
position = Vector2(592, 324)
shape = SubResource("RectangleShape2D_y1ovd")

[node name="Timer" type="Timer" parent="CampfireSpawn"]

[node name="Sprite2D" type="Sprite2D" parent="CampfireSpawn"]
scale = Vector2(1e-05, 0.3)
texture = ExtResource("8_r4t1p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CampfireSpawn"]
libraries = {
"": SubResource("AnimationLibrary_calx2")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_8a0xe")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="timeout" from="BudsSpawnArea/Timer" to="BudsSpawnArea" method="_on_timer_timeout"]
[connection signal="timeout" from="CampfireSpawn/Timer" to="CampfireSpawn" method="_on_timer_timeout"]
